<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:contentDescription="@string/img_logo"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:text="@string/btn_play" />
    
    <Button
        android:id="@+id/btnStats"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnPlay"
        android:layout_below="@+id/btnPlay"
        android:layout_marginTop="22dp"
        android:text="@string/btn_stats" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnStats"
        android:layout_below="@+id/btnStats"
        android:layout_marginTop="20dp"
        android:text="@string/btn_settings" />

    

</RelativeLayout>
